--- a/aws/DRVault-Single-Deployment.yaml
+++ b/aws/DRVault-Single-Deployment.yaml
@@ -520,7 +520,7 @@ Resources:
       Name: !Join
       - ''
       - - !Ref VaultHostname
-        - '-dr.pas.local'
+        - '.pas.local'
       ResourceRecords:
       - !GetAtt VaultDRMachine.PrivateIp
       TTL: '900'
